force-app/main/default/objects/Carrier__c/Carrier__c.object-meta.xml
<CustomObject>
    <description>[a04][Carrier__c] Companhias de transporte de produtos.</description>
    <label>Transportadora</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transportadoras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>