force-app/main/default/objects/Carrier__c/fields/CityTxt__c.field-meta.xml
<CustomField>
    <fullName>CityTxt__c</fullName>
    <label>Cidade</label>
    <length>40</length>
    <type>Text</type>
</CustomField>