force-app/main/default/objects/Carrier__c/fields/CNPJTxt__c.field-meta.xml
<CustomField>
    <fullName>CNPJTxt__c</fullName>
    <label>CNPJ</label>
    <length>16</length>
    <type>Text</type>
</CustomField>