force-app/main/default/objects/Carrier__c/fields/CodeCarrierTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeCarrierTxt__c</fullName>
    <externalId>true</externalId>
    <label>Código da transportadora</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>