force-app/main/default/objects/Carrier__c/fields/CountryTxt__c.field-meta.xml
<CustomField>
    <fullName>CountryTxt__c</fullName>
    <label>País</label>
    <length>15</length>
    <type>Text</type>
</CustomField>