force-app/main/default/objects/Carrier__c/fields/EmailTxt__c.field-meta.xml
<CustomField>
    <fullName>EmailTxt__c</fullName>
    <label>E-mail</label>
    <length>241</length>
    <type>Text</type>
</CustomField>