force-app/main/default/objects/Carrier__c/fields/FiscalResidenceTxt__c.field-meta.xml
<CustomField>
    <fullName>FiscalResidenceTxt__c</fullName>
    <label>Domicílio fiscal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>