force-app/main/default/objects/Carrier__c/fields/Name2Txt__c.field-meta.xml
<CustomField>
    <fullName>Name2Txt__c</fullName>
    <label>Nome 2</label>
    <length>160</length>
    <type>Text</type>
</CustomField>