force-app/main/default/objects/Carrier__c/fields/NationalRegistryTxt__c.field-meta.xml
<CustomField>
    <fullName>NationalRegistryTxt__c</fullName>
    <label>Inscrição estadual</label>
    <length>18</length>
    <type>Text</type>
</CustomField>