force-app/main/default/objects/Carrier__c/fields/PhoneTxt__c.field-meta.xml
<CustomField>
    <fullName>PhoneTxt__c</fullName>
    <label>Telefone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>