force-app/main/default/objects/Carrier__c/fields/PostalCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeTxt__c</fullName>
    <label>CEP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>