force-app/main/default/objects/Carrier__c/fields/RegionTxt__c.field-meta.xml
<CustomField>
    <fullName>RegionTxt__c</fullName>
    <label>Região</label>
    <length>2</length>
    <type>Text</type>
</CustomField>