force-app/main/default/objects/Carrier__c/fields/StreetTxt__c.field-meta.xml
<CustomField>
    <fullName>StreetTxt__c</fullName>
    <label>Rua/nº</label>
    <length>35</length>
    <type>Text</type>
</CustomField>