force-app/main/default/objects/Carrier__c/fields/TransportZoneTxt__c.field-meta.xml
<CustomField>
    <fullName>TransportZoneTxt__c</fullName>
    <label>Zona de transporte</label>
    <length>10</length>
    <type>Text</type>
</CustomField>