force-app/main/default/objects/Carrier__c/fields/TypeTxt__c.field-meta.xml
<CustomField>
    <fullName>TypeTxt__c</fullName>
    <label>Tipo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>