force-app/main/default/objects/Carrier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodeCarrierTxt__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CNPJTxt__c</columns>
    <columns>CPFTxt__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>